
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2024 DEC 12a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - bug fixes


2024 DEC 10a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - various changes 
    

2024 DEC 08a
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - various changes
    

2024 NOV 26a
  * in model/transport/_Gupta-Yos/transport.c
    - in find_nuk_eta_kappak_muk() added call to adjust_nuk_using_mobilities_given_muk()
      when TRANSPORTMODEL_NONEQUILIBRIUMCORRECTED_IONMOBILITIESPARENTMACHERET is selected
  

2024 OCT 14a
  * in cycle/resconv/_MUSCL/resconv.c
    - added FLUX_KNP
  * in cycle/share/res_share.c
    - added find_Fstar_interface_KNP_muscl()
  * in model/chem/_N2_Plasma_4s/chem.c
    - added CHEMMODEL_PARENT2025
  * in model/chem/_NH3_Plasma_32s/arakoni2007omprakas.c
    - made various modifications
  * in model/chem/_NH3_Plasma_32s/chem.c
    - added ARAKONIOMPRAKASREACTIONTYPE
  * in model/chem/_N2_Plasma_4s/
    - added parent2025.c


2024 SEP 21a
  * in model/fluid/_Navier-Stokes_plasma/fluid_source.c
    - in find_Semfield(), changed call to _E_dot_J_recast() by call to _E_dot_J()
  * in model/share/emfield_share.c
    - added find_vector_from_vectorstar()
    - added find_E_for_EdotJe()
    - in _E_dot_J() replaced find_E() by find_E_for_EdotJe()
    - in _E_dot_Je_over_mueNe(), replaced find_E_smoothed() by find_E_for_EdotJe()
     

2024 SEP 15b
  * in bin/cylinderinnerflow2D.wrp
    - added a DualTimeStepping() module in Cycle()
  * in src/test.c
    - in main(), fixed bugs related to input.M*
    

2024 SEP 15a
  * in model/chem/_N2_Plasma_4s/chem.c
    - added the option TEFROMEOVERN
  * in src/data.c